Small changes in constants

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/gif" href="icon.ico" />
+    <link rel="icon" type="image/gif" href="icon.ico"/>
     <title>vLove</title>
 
     <!--Hearts-->
@@ -21,15 +21,15 @@
     <script src="speeddating.js"></script>
 </head>
 <body>
-    <div class="bg_heart">
-        <button onclick="makeMatches()" class="button button_3d" data-button="red">Losuj</button>
-        <table id="matches" class="tableOfMatches">
-            <tr>
-                <th>Mężczyzna</th>
-                <th>Kobieta</th>
-            </tr>
-        </table>
+<div class="bg_heart">
+    <button onclick="makeMatches()" class="button button_3d" data-button="red">Losuj</button>
+    <table id="matches" class="tableOfMatches">
+        <tr>
+            <th>Chłopak</th>
+            <th>Dziewczyna</th>
+        </tr>
+    </table>
 
-    </div>
+</div>
 </body>
 </html>
